Add second course about vuejs

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,4 +1,4 @@
-<SlidePage>
+<SlidePage metas={{name: '@RIOU Kevin', title:'VueJS - MDS', url: 'https://kevin.riou.pro', date: '30/03/2022'}}>
     
 <Cover>
 
@@ -82,11 +82,11 @@ Les packages sont les dépendances (code parlant) d'une application
 
 ---
 
-<TableOfContents />
+<TableOfContents set={0} />
 
 ---
 
-<TableOfContents i={0} />
+<TableOfContents set={0} i={0} />
 
 ---
 
@@ -180,7 +180,7 @@ Les composants importés sont automatiquement enregistrés pour leur utilisation
 
 ---
 
-<TableOfContents i={1} />
+<TableOfContents set={0} i={1} />
 
 ---
 
@@ -192,7 +192,7 @@ Les composants importés sont automatiquement enregistrés pour leur utilisation
 
 ---
 
-<TableOfContents i={2} />
+<TableOfContents set={0} i={2} />
 
 ---
 
@@ -204,7 +204,7 @@ Non Embed => Utilisation dans des fichiers spécifiques à VueJS
 
 ---
 
-<TableOfContents i={3} />
+<TableOfContents set={0} i={3} />
 
 ---
 
@@ -407,7 +407,7 @@ export default {
 
 ---
 
-<TableOfContents i={4} />
+<TableOfContents set={0} i={4} />
 
 ---
 
@@ -482,7 +482,7 @@ une application vue est disponible sur le port indiqué
 
 ---
 
-<TableOfContents i={5} />
+<TableOfContents set={0} i={5} />
 
 ---
 
