--- a/pages/two.mdx
+++ b/pages/two.mdx
@@ -334,7 +334,29 @@ Exo 6:
 
 ---
 
-TODO Cours + exo focus sur champs
+## Reférences
+
+Permet d'associer une variable à un élément du template
+
+```html
+<script setup>
+  import { ref } from "vue";
+
+  const input = ref(null);
+
+  console.log(input.value);
+</script>
+
+<template>
+  <input ref="input" />
+</template>
+```
+
+---
+
+## Exo je sais plus combien + 1:
+
+- Ajouter un bouton dans le composant (C) qui permet de focus le champs de saisie
 
 ---
 
@@ -342,7 +364,13 @@ TODO Cours + exo focus sur champs
 
 ---
 
-TODO cours + exo layout de placement fournissans une base de composant
+## Slots
+
+# Si on arrive là, c'est que l'on à tracé,
+
+GG à toi qui est à ce stade  
+pour commencer, je te propose de lire un peu la doc
+[ICI](https://vuejs.org/guide/components/slots.html)
 
 ---
 
@@ -350,7 +378,7 @@ TODO cours + exo layout de placement fournissans une base de composant
 
 ---
 
-# Projet
+# Projet Groot
 
 ---
 
